Fix sidebar on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,6 +118,7 @@ nav .nextra-scrollbar ._text-primary-600 {
   line-height: 21px; /* 161.538% */
 }
 
+
 /* Sidebar styles for dark mode */
 .dark nav .nextra-scrollbar ._text-primary-600 {
   color: #FB6E00;
@@ -137,6 +138,15 @@ nav .nextra-scrollbar {
   font-weight: 600;
   line-height: 21px;
 }
+
+.nextra-sidebar-container {
+  background-color: white;
+}
+
+.dark .nextra-sidebar-container {
+  background-color: #121212;
+}
+
 
 /* Sidebar active link styles */
 .nextra-sidebar-container .active > a {
@@ -162,7 +172,7 @@ nav .nextra-scrollbar {
   font-style: normal;
   font-weight: 600;
   line-height: 21px;
-}
+} 
 
 /* Last sidebar element styles for dark mode */
 .dark .nextra-menu-desktop > :last-child,
@@ -252,6 +262,9 @@ html.dark div._sticky._bottom-0 {
 html.dark div.nextra-nav-container {
   background-color: var(--brand-black) !important;
 } */
+
+
+
 .dark nav.nextra-toc * {
   box-shadow: none !important;
 }
